[package]
name = "string-number"
version = "0.3.0"
edition = "2018"
authors = ["Makoto <makoto@emurasoft.com>"]
documentation = "https://docs.rs/string-number/"
license = "MIT"
description = "StringNumber is a decimal number type that stores the number as a string."
repository = "https://github.com/MakotoE/string-number"
readme = "README.md"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[lib]
bench = false

[features]
# BigDecimal conversion
big_decimal = ["bigdecimal"]

[dependencies]
bigdecimal = { version = "0.2", optional = true }
anyhow = "1.0"

[dev-dependencies]
rstest = "0.10"
quickcheck = "1.0"
quickcheck_macros = "1.0"
num-bigint = "0.3"
lazy_static = "1.4"
criterion = { version = "0.3", features = ["html_reports"]}
bigdecimal = "0.2"